--- a/Cleangaroo/Cleangaroo/Web.config
+++ b/Cleangaroo/Cleangaroo/Web.config
@@ -3,6 +3,10 @@
   For more information on how to configure your ASP.NET application, please visit
   https://go.microsoft.com/fwlink/?LinkId=301880
   -->
+<!--
+  For more information on how to configure your ASP.NET application, please visit
+  https://go.microsoft.com/fwlink/?LinkId=301880
+  -->
 <configuration>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0"/>
