Create Appointment (FE) - not Final

--- a/CleanGuruApp/CleanGuruApp/CleanGuruApp.csproj
+++ b/CleanGuruApp/CleanGuruApp/CleanGuruApp.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Folder Include="Views\Customer\" />
     <Folder Include="wwwroot\css\" />
   </ItemGroup>
 
