create manager page and modify layout

--- a/CleanGuruApp/CleanGuruApp/CleanGuruApp.csproj
+++ b/CleanGuruApp/CleanGuruApp/CleanGuruApp.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <Content Remove="Views\Home\Cost.cshtml" />
+    <Content Remove="Views\Home\CreateService.cshtml" />
     <Content Remove="Views\Home\DefineCost.cshtml" />
   </ItemGroup>
 
