--- a/CleanGuruApp/CleanGuruApp/CleanGuruApp.csproj
+++ b/CleanGuruApp/CleanGuruApp/CleanGuruApp.csproj
@@ -5,17 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="Views\Home\DefineCost.cshtml.cs" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Content Remove="Views\Home\Cost.cshtml" />
-    <Content Remove="Views\Home\CreateService.cshtml" />
-    <Content Remove="Views\Home\DefineCost.cshtml" />
-  </ItemGroup>
-
-  <ItemGroup>
     <Folder Include="Views\Customer\" />
+    <Folder Include="wwwroot\css\" />
   </ItemGroup>
 
   <ItemGroup>
@@ -25,8 +16,7 @@
     
     <!--Connection with DB - pg 209-->
     <!--<PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All" />-->     <!--ORIGINAL - Delete after connecting with our DB-->
-    <PackageReference Include="Microsoft.VisualStudio.Web.codeGeneration.Design" Version="2.1.9" PrivateAssets="All" />
-    <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />   <!--NEW -->
+    <PackageReference Include="Microsoft.VisualStudio.Web.codeGeneration.Design" Version="2.1.9" PrivateAssets="All" />   <!--NEW -->
   </ItemGroup>
 
 </Project>
