UserStory to Show Future Appointments
UserStory to Show to Customer the Future Appointments.
Mudança do tipo da variavel isSubscription para boolean.

--- a/CleanGuruApp/CleanGuruApp/CleanGuruApp.csproj
+++ b/CleanGuruApp/CleanGuruApp/CleanGuruApp.csproj
@@ -35,4 +35,13 @@
     <!--NEW -->
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Update="Views\Appointment\Details.cshtml">
+      <Pack>$(IncludeRazorContentInPack)</Pack>
+    </Content>
+    <Content Update="Views\Appointment\FutureAppointment.cshtml">
+      <Pack>$(IncludeRazorContentInPack)</Pack>
+    </Content>
+  </ItemGroup>
+
 </Project>
