ServiceList (Details and Cancel button)
Created the details and Cancel button and the logi to delete the appointment without CustomerSubscription

--- a/CleanGuruApp/CleanGuruApp/CleanGuruApp.csproj
+++ b/CleanGuruApp/CleanGuruApp/CleanGuruApp.csproj
@@ -39,7 +39,7 @@
     <Content Update="Views\Appointment\Details.cshtml">
       <Pack>$(IncludeRazorContentInPack)</Pack>
     </Content>
-    <Content Update="Views\Appointment\FutureAppointment.cshtml">
+    <Content Update="Views\Appointment\ServiceList.cshtml">
       <Pack>$(IncludeRazorContentInPack)</Pack>
     </Content>
   </ItemGroup>
