--- a/CleanGuruApp/CleanGuruApp/CleanGuruApp.csproj
+++ b/CleanGuruApp/CleanGuruApp/CleanGuruApp.csproj
@@ -37,6 +37,9 @@
     <Content Update="Views\Appointment\FutureAppointment.cshtml">
       <Pack>$(IncludeRazorContentInPack)</Pack>
     </Content>
+    <Content Update="Views\Shared\Accept.cshtml">
+      <Pack>$(IncludeRazorContentInPack)</Pack>
+    </Content>
   </ItemGroup>
 
   <ItemGroup>
